--- a/milestone5-unique-link/style.css
+++ b/milestone5-unique-link/style.css
@@ -16,6 +16,7 @@
     padding-left: 20px;
     padding-top: 30px;
     padding-bottom: 30px;
+    padding-right: 20px;
 
 }
 
@@ -26,7 +27,7 @@
 }
 
 .background{
-    background-color: rgb(124, 255, 255);
+    background-color: rgb(124, 255, 255);    
 }
 
 .btn{
